kubernetes/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: opencut
  labels:
    app: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: web
