kubernetes/base/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: opencut
  annotations:
    # nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    # traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: opencut-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: opencut.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
